--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-cytoscapebasic></app-cytoscapebasic>
+<!-- <app-cytoscapebasic></app-cytoscapebasic> -->
+<app-login></app-login>
 <router-outlet></router-outlet>
