--- a/src/app/singup/singup.component.css
+++ b/src/app/singup/singup.component.css
@@ -14,10 +14,11 @@
   width: 400px;
 }
 
-.btn_submit {
-  display: block;
-  width: 100%;
+button {
+  width: calc(50% - 5px);
   height: 50px;
   font-size: 18px;
-  margin-top: 20px;
+}
+.btn_cancel{
+  margin-left: 10px;
 }
