--- a/src/app/signup/singup.component.html
+++ b/src/app/signup/singup.component.html
@@ -1,6 +1,9 @@
 <form (ngSubmit)="onSubmit()" ngNativeValidate class="login_form">
   <fieldset>
     <legend>회원가입</legend>
+    <p class="error" *ngIf="errorMessage">
+      {{errorMessage}}
+    </p>
     <mat-form-field class="item">
       <input type="email" [(ngModel)]="user.email" name="email" id="email" required matInput placeholder="이메일">
     </mat-form-field>
