--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -4,7 +4,8 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
+      <a mat-list-item [routerLink]="['/cy/colajs-graph']">Cola.js gene-gene graph</a>
+      <a mat-list-item [routerLink]="['/cy/tokyo-railways']">tokyo-railways</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -13,8 +14,9 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Cytoscape.js Demos</span>
+      <span>{{SubTitle.subtitle}}</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
