--- a/src/app/cytoscape/colajs-graph/colajs-graph.component.html
+++ b/src/app/cytoscape/colajs-graph/colajs-graph.component.html
@@ -1,1 +1,16 @@
 <div id="cy"></div>
+<div id="config" class="config">
+
+  <div class="preamble">
+    <span class="label label-info">Cola.js/Cytoscape.js demo</span>
+
+    <p>This is a demo of a graph of gene-gene interactions that uses Cola.js for layout and Cytoscape.js for its graph
+      model and visualisation. Use the controls below to alter the Cola.js layout parameters.</p>
+    <p>
+      Data by <a href="http://genemania.org">GeneMANIA</a><br />
+      Visualisation by <a href="http://js.cytoscape.org">Cytoscape.js</a><br />
+      Layout by <a href="http://marvl.infotech.monash.edu/webcola/">Cola.js</a>
+    </p>
+  </div>
+
+</div>
