Cola.js gene-gene graph 스타일 변경 작업

--- a/src/app/cytoscape/colajs-graph/colajs-graph.component.css
+++ b/src/app/cytoscape/colajs-graph/colajs-graph.component.css
@@ -98,3 +98,13 @@ a:hover {
     right: 0;
   }
 }
+
+.mat-icon-button{
+  vertical-align: top;
+}
+.btn_color_red{
+  background-color: red;
+}
+.node_red{
+  background-color: red;
+}
