--- a/src/app/cytoscape/colajs-graph/colajs-graph.component.html
+++ b/src/app/cytoscape/colajs-graph/colajs-graph.component.html
@@ -12,5 +12,17 @@
       Layout by <a href="http://marvl.infotech.monash.edu/webcola/">Cola.js</a>
     </p>
   </div>
+  <div class="style">
+	  <button mat-icon-button class="btn_cached">
+	    <mat-icon>cached</mat-icon>
+	  </button>
+	  <ul>
+		  <li><button class="btn_node_color_red">node 컬러 레드</button></li>
+		  <li><button class="btn_edge_color_red">edge 컬러 레드</button></li>
+		  <!-- <li><button class="btn_edge_color_random">edge 컬러 렌덤</button></li> -->
+		  <li><button class="btn_font_color_red">font 컬러 레드</button></li>
+		  <li><button class="btn_reset">node 스타일 리셋</button></li>
+	  </ul>
+  </div>
 
 </div>
