--- a/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
+++ b/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
@@ -1,2 +1,5 @@
 <div id="cy"></div>
 <button id="clear" mat-raised-button>CLEAR</button>
+<div class="dialog">
+  <button mat-raised-button (click)="openDialog()">Change Background Color</button>
+</div>
