Tokyo railways 스타일 변경 기능 추가

--- a/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
+++ b/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
@@ -1,5 +1,5 @@
 <div id="cy"></div>
 <button id="clear" mat-raised-button>CLEAR</button>
 <div class="dialog">
-  <button mat-raised-button (click)="openDialog()">Change Background Color</button>
+  <button mat-raised-button (click)="openDialog()">Change Theme</button>
 </div>
