--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,8 @@ body.has-start:not(.has-end) #start {
 body.calc #loading {
   display: block;
 }
+
+.mat-list-item.active{
+  font-weight: 700;
+  background-color: rgba(0, 0, 0, .04);
+}
