Popper.js extension 추가

--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -7,6 +7,7 @@
       <a mat-list-item [routerLink]="['/cy/colajs-graph']" routerLinkActive="active">Cola.js gene-gene graph</a>
       <a mat-list-item [routerLink]="['/cy/tokyo-railways']" routerLinkActive="active">tokyo-railways</a>
       <a mat-list-item [routerLink]="['/cy/performance-tuning']" routerLinkActive="active">Performance tuning</a>
+      <a mat-list-item [routerLink]="['/cy/popperjs-extension']" routerLinkActive="active">Popper.js extension</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
