--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -9,6 +9,7 @@
       <a mat-list-item [routerLink]="['/cy/performance-tuning']" routerLinkActive="active">Performance tuning</a>
       <a mat-list-item [routerLink]="['/cy/popperjs-extension']" routerLinkActive="active">Popper.js extension</a>
       <a mat-list-item [routerLink]="['/cy/popperjs-extension-tippyjs-tooltips']" routerLinkActive="active">Popper.js extension & Tippy.js tooltips</a>
+      <a mat-list-item [routerLink]="['/cy/automove-extension']" routerLinkActive="active">Automove extension</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
