--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -11,6 +11,7 @@
       <a mat-list-item [routerLink]="['/cy/popperjs-extension-tippyjs-tooltips']" routerLinkActive="active">Popper.js extension & Tippy.js tooltips</a>
       <a mat-list-item [routerLink]="['/cy/automove-extension']" routerLinkActive="active">Automove extension</a>
       <a mat-list-item [routerLink]="['/cy/cxtmenu-extension']" routerLinkActive="active">Cxtmenu extension</a>
+      <a mat-list-item [routerLink]="['/cy/edgehandles-extension']" routerLinkActive="active">Edgehandles extension</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
