--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -14,6 +14,7 @@
       <a mat-list-item [routerLink]="['/cy/edgehandles-extension']" routerLinkActive="active">Edgehandles extension</a>
       <a mat-list-item [routerLink]="['/cy/circle-layout']" routerLinkActive="active">Circle layout</a>
       <a mat-list-item [routerLink]="['/cy/concentric-layout']" routerLinkActive="active">Concentric layout</a>
+      <a mat-list-item [routerLink]="['/cy/grid-layout']" routerLinkActive="active">Grid layout</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
