--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -15,6 +15,7 @@
       <a mat-list-item [routerLink]="['/cy/circle-layout']" routerLinkActive="active">Circle layout</a>
       <a mat-list-item [routerLink]="['/cy/concentric-layout']" routerLinkActive="active">Concentric layout</a>
       <a mat-list-item [routerLink]="['/cy/grid-layout']" routerLinkActive="active">Grid layout</a>
+      <a mat-list-item [routerLink]="['/cy/cose-layout']" routerLinkActive="active">Cose layout</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
