느려지는 현상 수정

--- a/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
+++ b/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
@@ -1,4 +1,4 @@
-<div id="cy"></div>
+<div id="cyTokyo"></div>
 <button id="clear" mat-raised-button>CLEAR</button>
 <div class="dialog">
   <button mat-raised-button (click)="openDialog()">Change Theme</button>
