성능 느려지는 문제 수정

--- a/src/app/cytoscape/colajs-graph/colajs-graph.component.html
+++ b/src/app/cytoscape/colajs-graph/colajs-graph.component.html
@@ -1,4 +1,4 @@
-<div id="cyColajsGraph"></div>
+<div id="cyColajsGraph" class="cy_wrap"></div>
 <div id="config" class="config">
 
   <div class="preamble">
