--- a/src/app/cytoscape/edgehandles-extension/edgehandles-extension.component.html
+++ b/src/app/cytoscape/edgehandles-extension/edgehandles-extension.component.html
@@ -1,6 +1,6 @@
-<div id="cyEdgehandles"></div>
+<div id="cyEdgehandles" class="cy_wrap"></div>
 
-<div id="buttons">
+<div id="buttons" class="cy_del">
 	<button id="start">Start on selected</button>
 	<button id="draw-on">Draw mode on</button>
 	<button id="draw-off">Draw mode off</button>
