--- a/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
+++ b/src/app/cytoscape/tokyo-railways/tokyo-railways.component.html
@@ -1,5 +1,5 @@
-<div id="cyTokyo"></div>
-<button id="clear" mat-raised-button>CLEAR</button>
-<div class="dialog">
+<div id="cyTokyo" class="cy_wrap"></div>
+<button class="cy_del" id="clear" mat-raised-button>CLEAR</button>
+<div class="dialog cy_del">
   <button mat-raised-button (click)="openDialog()">Change Theme</button>
 </div>
