CoSE Bilkent layout (compound) 추가

--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -18,6 +18,8 @@
       <a mat-list-item [routerLink]="['/cy/grid-layout']" routerLinkActive="active" onclick="removeCy()">Grid layout</a>
       <a mat-list-item [routerLink]="['/cy/cose-layout']" routerLinkActive="active" onclick="removeCy()">Cose layout</a>
       <a mat-list-item [routerLink]="['/cy/cose-bilkent-layout']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout</a>
+      <a mat-list-item [routerLink]="['/cy/cose-bilkent-layout-compound']" routerLinkActive="active"
+      	onclick="removeCy()">CoSE Bilkent layout(compound)</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
