--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -20,6 +20,8 @@
       <a mat-list-item [routerLink]="['/cy/cose-bilkent-layout']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout</a>
       <a mat-list-item [routerLink]="['/cy/cose-bilkent-layout-compound']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout(compound)</a>
       <a mat-list-item [routerLink]="['/cy/cola-layout']" routerLinkActive="active" onclick="removeCy()">Cola layout</a>
+      <a mat-list-item [routerLink]="['/cy/cola-layout-compound']" routerLinkActive="active" onclick="removeCy()">Cola
+      	layout(compound)</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
