Spread layout 추가

--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -22,6 +22,7 @@
       <a mat-list-item [routerLink]="['/cy/cola-layout']" routerLinkActive="active" onclick="removeCy()">Cola layout</a>
       <a mat-list-item [routerLink]="['/cy/cola-layout-compound']" routerLinkActive="active" onclick="removeCy()">Cola layout(compound)</a>
       <a mat-list-item [routerLink]="['/cy/euler-layout']" routerLinkActive="active" onclick="removeCy()">Euler layout</a>
+      <a mat-list-item [routerLink]="['/cy/spread-layout']" routerLinkActive="active" onclick="removeCy()">Spread layout</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
