--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -24,6 +24,7 @@
       <a mat-list-item [routerLink]="['/cy/euler-layout']" routerLinkActive="active" onclick="removeCy()">Euler layout</a>
       <a mat-list-item [routerLink]="['/cy/spread-layout']" routerLinkActive="active" onclick="removeCy()">Spread layout</a>
       <a mat-list-item [routerLink]="['/cy/dagre-layout']" routerLinkActive="active" onclick="removeCy()">Dagre layout</a>
+      <a mat-list-item [routerLink]="['/cy/klay-layout']" routerLinkActive="active" onclick="removeCy()">Klay layout</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
