--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -1,42 +1,42 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
-    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
-    [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item [routerLink]="['/cy/colajs-graph']" routerLinkActive="active" onclick="removeCy()">Cola.js
-      	gene-gene graph</a>
-      <a mat-list-item [routerLink]="['/cy/tokyo-railways']" routerLinkActive="active" onclick="removeCy()">tokyo-railways</a>
-      <a mat-list-item [routerLink]="['/cy/performance-tuning']" routerLinkActive="active" onclick="removeCy()">Performance tuning</a>
-      <a mat-list-item [routerLink]="['/cy/popperjs-extension']" routerLinkActive="active" onclick="removeCy()">Popper.js extension</a>
-      <a mat-list-item [routerLink]="['/cy/popperjs-extension-tippyjs-tooltips']" routerLinkActive="active" onclick="removeCy()">Popper.js extension & Tippy.js tooltips</a>
-      <a mat-list-item [routerLink]="['/cy/automove-extension']" routerLinkActive="active" onclick="removeCy()">Automove extension</a>
-      <a mat-list-item [routerLink]="['/cy/cxtmenu-extension']" routerLinkActive="active" onclick="removeCy()">Cxtmenu extension</a>
-      <a mat-list-item [routerLink]="['/cy/edgehandles-extension']" routerLinkActive="active" onclick="removeCy()">Edgehandles extension</a>
-      <a mat-list-item [routerLink]="['/cy/circle-layout']" routerLinkActive="active" onclick="removeCy()">Circle layout</a>
-      <a mat-list-item [routerLink]="['/cy/concentric-layout']" routerLinkActive="active" onclick="removeCy()">Concentric layout</a>
-      <a mat-list-item [routerLink]="['/cy/grid-layout']" routerLinkActive="active" onclick="removeCy()">Grid layout</a>
-      <a mat-list-item [routerLink]="['/cy/cose-layout']" routerLinkActive="active" onclick="removeCy()">Cose layout</a>
-      <a mat-list-item [routerLink]="['/cy/cose-bilkent-layout']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout</a>
-      <a mat-list-item [routerLink]="['/cy/cose-bilkent-layout-compound']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout(compound)</a>
-      <a mat-list-item [routerLink]="['/cy/cola-layout']" routerLinkActive="active" onclick="removeCy()">Cola layout</a>
-      <a mat-list-item [routerLink]="['/cy/cola-layout-compound']" routerLinkActive="active" onclick="removeCy()">Cola layout(compound)</a>
-      <a mat-list-item [routerLink]="['/cy/euler-layout']" routerLinkActive="active" onclick="removeCy()">Euler layout</a>
-      <a mat-list-item [routerLink]="['/cy/spread-layout']" routerLinkActive="active" onclick="removeCy()">Spread layout</a>
-      <a mat-list-item [routerLink]="['/cy/dagre-layout']" routerLinkActive="active" onclick="removeCy()">Dagre layout</a>
-      <a mat-list-item [routerLink]="['/cy/klay-layout']" routerLinkActive="active" onclick="removeCy()">Klay layout</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>{{SubTitle.subtitle}}</span>
-    </mat-toolbar>
-    <button class="btn_logout" (click)="logOut()" mat-raised-button>로그아웃</button>
-    <!-- Add Content Here -->
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
+	<mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+		[attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
+		[opened]="!(isHandset$ | async)">
+		<mat-toolbar>Menu</mat-toolbar>
+		<mat-nav-list>
+			<a mat-list-item [routerLink]="['/cy/colajs-graph']" routerLinkActive="active" onclick="removeCy()">Cola.js gene-gene graph</a>
+			<a mat-list-item [routerLink]="['/cy/tokyo-railways']" routerLinkActive="active" onclick="removeCy()">tokyo-railways</a>
+			<a mat-list-item [routerLink]="['/cy/performance-tuning']" routerLinkActive="active" onclick="removeCy()">Performance tuning</a>
+			<a mat-list-item [routerLink]="['/cy/popperjs-extension']" routerLinkActive="active" onclick="removeCy()">Popper.js extension</a>
+			<a mat-list-item [routerLink]="['/cy/popperjs-extension-tippyjs-tooltips']" routerLinkActive="active" onclick="removeCy()">Popper.js extension & Tippy.js tooltips</a>
+			<a mat-list-item [routerLink]="['/cy/automove-extension']" routerLinkActive="active" onclick="removeCy()">Automove extension</a>
+			<a mat-list-item [routerLink]="['/cy/cxtmenu-extension']" routerLinkActive="active" onclick="removeCy()">Cxtmenu extension</a>
+			<a mat-list-item [routerLink]="['/cy/edgehandles-extension']" routerLinkActive="active" onclick="removeCy()">Edgehandles extension</a>
+			<a mat-list-item [routerLink]="['/cy/circle-layout']" routerLinkActive="active" onclick="removeCy()">Circle layout</a>
+			<a mat-list-item [routerLink]="['/cy/concentric-layout']" routerLinkActive="active" onclick="removeCy()">Concentric layout</a>
+			<a mat-list-item [routerLink]="['/cy/grid-layout']" routerLinkActive="active" onclick="removeCy()">Grid layout</a>
+			<a mat-list-item [routerLink]="['/cy/cose-layout']" routerLinkActive="active" onclick="removeCy()">Cose layout</a>
+			<a mat-list-item [routerLink]="['/cy/cose-bilkent-layout']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout</a>
+			<a mat-list-item [routerLink]="['/cy/cose-bilkent-layout-compound']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout(compound)</a>
+			<a mat-list-item [routerLink]="['/cy/cola-layout']" routerLinkActive="active" onclick="removeCy()">Cola layout</a>
+			<a mat-list-item [routerLink]="['/cy/cola-layout-compound']" routerLinkActive="active" onclick="removeCy()">Cola layout(compound)</a>
+			<a mat-list-item [routerLink]="['/cy/euler-layout']" routerLinkActive="active" onclick="removeCy()">Euler layout</a>
+			<a mat-list-item [routerLink]="['/cy/spread-layout']" routerLinkActive="active" onclick="removeCy()">Spread layout</a>
+			<a mat-list-item [routerLink]="['/cy/dagre-layout']" routerLinkActive="active" onclick="removeCy()">Dagre layout</a>
+			<a mat-list-item [routerLink]="['/cy/klay-layout']" routerLinkActive="active" onclick="removeCy()">Klay layout</a>
+			<a mat-list-item [routerLink]="['/cy/breadthfirst-layout']" routerLinkActive="active" onclick="removeCy()">Breadthfirst layout & images</a>
+		</mat-nav-list>
+	</mat-sidenav>
+	<mat-sidenav-content>
+		<mat-toolbar color="primary">
+			<button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+				*ngIf="isHandset$ | async">
+				<mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+			</button>
+			<span>{{SubTitle.subtitle}}</span>
+		</mat-toolbar>
+		<button class="btn_logout" (click)="logOut()" mat-raised-button>로그아웃</button>
+		<!-- Add Content Here -->
+		<router-outlet></router-outlet>
+	</mat-sidenav-content>
 </mat-sidenav-container>
