--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -25,6 +25,7 @@
 			<a mat-list-item [routerLink]="['/cy/dagre-layout']" routerLinkActive="active" onclick="removeCy()">Dagre layout</a>
 			<a mat-list-item [routerLink]="['/cy/klay-layout']" routerLinkActive="active" onclick="removeCy()">Klay layout</a>
 			<a mat-list-item [routerLink]="['/cy/breadthfirst-layout']" routerLinkActive="active" onclick="removeCy()">Breadthfirst layout & images</a>
+			<a mat-list-item [routerLink]="['/cy/animated-bfs']" routerLinkActive="active" onclick="removeCy()">Animated BFS</a>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
