--- a/src/app/cytoscape/cose-bilkent-layout/cose-bilkent-layout.component.html
+++ b/src/app/cytoscape/cose-bilkent-layout/cose-bilkent-layout.component.html
@@ -1,5 +1,5 @@
 <div id="cyCoseBlikent" class="cy_wrap"></div>
 <div class="over cy_del">
-	<button id="randomize" type="button">Randomize</button>
-	<button id="layoutButton" type="button">CoSE-Bilkent</button>
+	<button id="randomize" type="button" mat-raised-button>Randomize</button>
+	<button id="layoutButton" type="button" mat-raised-button>CoSE-Bilkent</button>
 </div>
