--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -29,6 +29,7 @@
 			<a mat-list-item [routerLink]="['/cy/node-types']" routerLinkActive="active" onclick="removeCy()">Node types</a>
 			<a mat-list-item [routerLink]="['/cy/edge-types']" routerLinkActive="active" onclick="removeCy()">Edge types</a>
 			<a mat-list-item [routerLink]="['/cy/edge-arrows']" routerLinkActive="active" onclick="removeCy()">Edge arrow types</a>
+			<a mat-list-item [routerLink]="['/cy/labels']" routerLinkActive="active" onclick="removeCy()">Labels</a>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
