Compound nodes 추가

--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -30,6 +30,7 @@
 			<a mat-list-item [routerLink]="['/cy/edge-types']" routerLinkActive="active" onclick="removeCy()">Edge types</a>
 			<a mat-list-item [routerLink]="['/cy/edge-arrows']" routerLinkActive="active" onclick="removeCy()">Edge arrow types</a>
 			<a mat-list-item [routerLink]="['/cy/labels']" routerLinkActive="active" onclick="removeCy()">Labels</a>
+			<a mat-list-item [routerLink]="['/cy/compound-nodes']" routerLinkActive="active" onclick="removeCy()">Compound nodes</a>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
