--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -32,6 +32,7 @@
 			<a mat-list-item [routerLink]="['/cy/labels']" routerLinkActive="active" onclick="removeCy()">Labels</a>
 			<a mat-list-item [routerLink]="['/cy/compound-nodes']" routerLinkActive="active" onclick="removeCy()">Compound nodes</a>
 			<a mat-list-item [routerLink]="['/cy/linkout']" routerLinkActive="active" onclick="removeCy()">Linkout example</a>
+			<a mat-list-item [routerLink]="['/cy/pie-style']" routerLinkActive="active" onclick="removeCy()">Pie style</a>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
