--- a/src/app/cytoscape/cymain/cymain.component.html
+++ b/src/app/cytoscape/cymain/cymain.component.html
@@ -1,38 +1,70 @@
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav_container">
 	<mat-sidenav #drawer class="sidenav" fixedInViewport="true"
 		[attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
 		[opened]="!(isHandset$ | async)">
 		<mat-toolbar>Menu</mat-toolbar>
 		<mat-nav-list>
-			<a mat-list-item [routerLink]="['/cy/colajs-graph']" routerLinkActive="active" onclick="removeCy()">Cola.js gene-gene graph</a>
-			<a mat-list-item [routerLink]="['/cy/tokyo-railways']" routerLinkActive="active" onclick="removeCy()">tokyo-railways</a>
-			<a mat-list-item [routerLink]="['/cy/performance-tuning']" routerLinkActive="active" onclick="removeCy()">Performance tuning</a>
-			<a mat-list-item [routerLink]="['/cy/popperjs-extension']" routerLinkActive="active" onclick="removeCy()">Popper.js extension</a>
-			<a mat-list-item [routerLink]="['/cy/popperjs-extension-tippyjs-tooltips']" routerLinkActive="active" onclick="removeCy()">Popper.js extension & Tippy.js tooltips</a>
-			<a mat-list-item [routerLink]="['/cy/automove-extension']" routerLinkActive="active" onclick="removeCy()">Automove extension</a>
-			<a mat-list-item [routerLink]="['/cy/cxtmenu-extension']" routerLinkActive="active" onclick="removeCy()">Cxtmenu extension</a>
-			<a mat-list-item [routerLink]="['/cy/edgehandles-extension']" routerLinkActive="active" onclick="removeCy()">Edgehandles extension</a>
-			<a mat-list-item [routerLink]="['/cy/circle-layout']" routerLinkActive="active" onclick="removeCy()">Circle layout</a>
-			<a mat-list-item [routerLink]="['/cy/concentric-layout']" routerLinkActive="active" onclick="removeCy()">Concentric layout</a>
-			<a mat-list-item [routerLink]="['/cy/grid-layout']" routerLinkActive="active" onclick="removeCy()">Grid layout</a>
-			<a mat-list-item [routerLink]="['/cy/cose-layout']" routerLinkActive="active" onclick="removeCy()">Cose layout</a>
-			<a mat-list-item [routerLink]="['/cy/cose-bilkent-layout']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout</a>
-			<a mat-list-item [routerLink]="['/cy/cose-bilkent-layout-compound']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout(compound)</a>
-			<a mat-list-item [routerLink]="['/cy/cola-layout']" routerLinkActive="active" onclick="removeCy()">Cola layout</a>
-			<a mat-list-item [routerLink]="['/cy/cola-layout-compound']" routerLinkActive="active" onclick="removeCy()">Cola layout(compound)</a>
-			<a mat-list-item [routerLink]="['/cy/euler-layout']" routerLinkActive="active" onclick="removeCy()">Euler layout</a>
-			<a mat-list-item [routerLink]="['/cy/spread-layout']" routerLinkActive="active" onclick="removeCy()">Spread layout</a>
-			<a mat-list-item [routerLink]="['/cy/dagre-layout']" routerLinkActive="active" onclick="removeCy()">Dagre layout</a>
-			<a mat-list-item [routerLink]="['/cy/klay-layout']" routerLinkActive="active" onclick="removeCy()">Klay layout</a>
-			<a mat-list-item [routerLink]="['/cy/breadthfirst-layout']" routerLinkActive="active" onclick="removeCy()">Breadthfirst layout & images</a>
-			<a mat-list-item [routerLink]="['/cy/animated-bfs']" routerLinkActive="active" onclick="removeCy()">Animated BFS</a>
-			<a mat-list-item [routerLink]="['/cy/node-types']" routerLinkActive="active" onclick="removeCy()">Node types</a>
-			<a mat-list-item [routerLink]="['/cy/edge-types']" routerLinkActive="active" onclick="removeCy()">Edge types</a>
-			<a mat-list-item [routerLink]="['/cy/edge-arrows']" routerLinkActive="active" onclick="removeCy()">Edge arrow types</a>
-			<a mat-list-item [routerLink]="['/cy/labels']" routerLinkActive="active" onclick="removeCy()">Labels</a>
-			<a mat-list-item [routerLink]="['/cy/compound-nodes']" routerLinkActive="active" onclick="removeCy()">Compound nodes</a>
-			<a mat-list-item [routerLink]="['/cy/linkout']" routerLinkActive="active" onclick="removeCy()">Linkout example</a>
-			<a mat-list-item [routerLink]="['/cy/pie-style']" routerLinkActive="active" onclick="removeCy()">Pie style</a>
+			<mat-accordion class="side_accordion">
+				<mat-expansion-panel>
+					<mat-expansion-panel-header>
+						<mat-panel-title>cytoscape.js</mat-panel-title>
+					</mat-expansion-panel-header>
+					<mat-accordion>
+						<mat-expansion-panel open>
+							<mat-expansion-panel-header>
+								<mat-panel-title>예제</mat-panel-title>
+							</mat-expansion-panel-header>
+							<mat-list role="list">
+								<mat-list-item role="listitem"><a mat-list-item [routerLink]="['/cy/colajs-graph']" routerLinkActive="active" onclick="removeCy()">Cola.js  gene-gene graph</a></mat-list-item>
+								<mat-list-item role="listitem"><a mat-list-item [routerLink]="['/cy/tokyo-railways']" routerLinkActive="active" onclick="removeCy()">tokyo-railways</a></mat-list-item>
+								<mat-list-item role="listitem"><a mat-list-item [routerLink]="['/cy/performance-tuning']" routerLinkActive="active" onclick="removeCy()">Performance tuning</a></mat-list-item>
+							</mat-list>
+						</mat-expansion-panel>
+						<mat-expansion-panel>
+							<mat-expansion-panel-header>
+								<mat-panel-title>익스텐션</mat-panel-title>
+							</mat-expansion-panel-header>
+							<a mat-list-item [routerLink]="['/cy/popperjs-extension']" routerLinkActive="active" onclick="removeCy()">Popper.js extension</a>
+							<a mat-list-item [routerLink]="['/cy/popperjs-extension-tippyjs-tooltips']" routerLinkActive="active"
+								onclick="removeCy()">Popper.js extension & Tippy.js tooltips</a>
+							<a mat-list-item [routerLink]="['/cy/automove-extension']" routerLinkActive="active" onclick="removeCy()">Automove extension</a>
+							<a mat-list-item [routerLink]="['/cy/cxtmenu-extension']" routerLinkActive="active" onclick="removeCy()">Cxtmenu extension</a>
+							<a mat-list-item [routerLink]="['/cy/edgehandles-extension']" routerLinkActive="active" onclick="removeCy()">Edgehandles extension</a>
+						</mat-expansion-panel>
+						<mat-expansion-panel>
+							<mat-expansion-panel-header>
+								<mat-panel-title>레이아웃</mat-panel-title>
+							</mat-expansion-panel-header>
+							<a mat-list-item [routerLink]="['/cy/circle-layout']" routerLinkActive="active" onclick="removeCy()">Circle layout</a>
+							<a mat-list-item [routerLink]="['/cy/concentric-layout']" routerLinkActive="active" onclick="removeCy()">Concentric layout</a>
+							<a mat-list-item [routerLink]="['/cy/grid-layout']" routerLinkActive="active" onclick="removeCy()">Grid layout</a>
+							<a mat-list-item [routerLink]="['/cy/cose-layout']" routerLinkActive="active" onclick="removeCy()">Cose layout</a>
+							<a mat-list-item [routerLink]="['/cy/cose-bilkent-layout']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout</a>
+							<a mat-list-item [routerLink]="['/cy/cose-bilkent-layout-compound']" routerLinkActive="active" onclick="removeCy()">CoSE Bilkent layout(compound)</a>
+							<a mat-list-item [routerLink]="['/cy/cola-layout']" routerLinkActive="active" onclick="removeCy()">Cola layout</a>
+							<a mat-list-item [routerLink]="['/cy/cola-layout-compound']" routerLinkActive="active" onclick="removeCy()">Cola layout(compound)</a>
+							<a mat-list-item [routerLink]="['/cy/euler-layout']" routerLinkActive="active" onclick="removeCy()">Euler layout</a>
+							<a mat-list-item [routerLink]="['/cy/spread-layout']" routerLinkActive="active" onclick="removeCy()">Spread layout</a>
+							<a mat-list-item [routerLink]="['/cy/dagre-layout']" routerLinkActive="active" onclick="removeCy()">Dagre layout</a>
+							<a mat-list-item [routerLink]="['/cy/klay-layout']" routerLinkActive="active" onclick="removeCy()">Klay layout</a>
+							<a mat-list-item [routerLink]="['/cy/breadthfirst-layout']" routerLinkActive="active" onclick="removeCy()">Breadthfirst layout & images</a>
+						</mat-expansion-panel>
+						<mat-expansion-panel>
+							<mat-expansion-panel-header>
+								<mat-panel-title>타입</mat-panel-title>
+							</mat-expansion-panel-header>
+							<a mat-list-item [routerLink]="['/cy/animated-bfs']" routerLinkActive="active" onclick="removeCy()">Animated BFS</a>
+							<a mat-list-item [routerLink]="['/cy/node-types']" routerLinkActive="active" onclick="removeCy()">Node types</a>
+							<a mat-list-item [routerLink]="['/cy/edge-types']" routerLinkActive="active" onclick="removeCy()">Edge types</a>
+							<a mat-list-item [routerLink]="['/cy/edge-arrows']" routerLinkActive="active" onclick="removeCy()">Edge arrow types</a>
+							<a mat-list-item [routerLink]="['/cy/labels']" routerLinkActive="active" onclick="removeCy()">Labels</a>
+							<a mat-list-item [routerLink]="['/cy/compound-nodes']" routerLinkActive="active" onclick="removeCy()">Compound nodes</a>
+							<a mat-list-item [routerLink]="['/cy/linkout']" routerLinkActive="active" onclick="removeCy()">Linkout example</a>
+							<a mat-list-item [routerLink]="['/cy/pie-style']" routerLinkActive="active" onclick="removeCy()">Pie style</a>
+						</mat-expansion-panel>
+					</mat-accordion>
+				</mat-expansion-panel>
+			</mat-accordion>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
